--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <div class="flex justify-between w-[13%]">
                 <!-- icon & number container -->
                 <div
-                    class=" flex items-center gap-2 rounded-[2.5rem] bg-[#FFF] pl-[16px] pr-[11px] pt-[2px]  h-[57px] mt-[13px]">
+                    class=" flex items-center gap-2 rounded-[2.5rem] bg-[#F4F7FF] pl-[16px] pr-[11px] pt-[2px]  h-[57px] mt-[13px]">
                     <img class="w-[32px] h-[32px]" src="assets/checkbox.png" alt="">
                     <h1 id="taskCompleted" class="text-[32px] font-bold w-[34px] h-[51px]">23</h1>
 
                 </div>
-                <div class="flex items-center rounded-full bg-[#FFF] 
+                <div class="flex items-center rounded-full bg-[#F4F7FF]
                             pl-[9px] pr-[9px] pt-[24px] pb-0 
                             h-[60px] border-b-[25px] mt-[11px]">
                     <button id="colorChanger">
@@ -83,7 +83,7 @@
                         <!-- Discover something section Tittle -->
                         <div class=" w-[298px]">
                             <h4 class="text-white  text-[24px] font-medium mr-8
-                            ">Discover Something New Today!</h4>
+                            " onclick="window.location.href='qa.html';">Discover Something New Today!</h4>
                         </div>
 
                     </section>
@@ -108,7 +108,8 @@
                     <div class="w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
                         <div class="w-[294px] h-[200px]">
                             <h5 class="bg-[#FFF] pl-4  pr-20 w-[82px] h-[28px] text-base rounded-lg">ShopEase</h5>
-                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Fix Mobile Button Issue </h3>
+                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Fix Mobile Button
+                                Issue </h3>
                             <p class="w-[262px] h-[80px] p-4 bg-[#FFF] rounded-lg text-base text-[#00303C] ">Debug using
                                 Chrome DevTools, check for overlappin..</p>
                         </div>
@@ -120,7 +121,7 @@
 
                             </div>
                             <div class="mr-4 w-[130px] h-[24px] pr-4 ">
-                                <button 
+                                <button
                                     class=" taskC bg-[#3752FD] rounded-lg text-[#ffff] px-5 py-1 ">Completed</button>
                             </div>
                         </div>
@@ -141,9 +142,8 @@
 
                             </div>
                             <div class="mr-4 w-[130px] h-[24px] pr-4 ">
-                                <button 
-                                class="taskC bg-[#3752FD] rounded-lg text-white px-5 py-1 opacity-50 " 
-                                disabled>Completed</button>
+                                <button class="taskC bg-[#3752FD] rounded-lg text-white px-5 py-1 opacity-50 "
+                                    disabled>Completed</button>
                             </div>
                         </div>
                     </div>
@@ -151,7 +151,8 @@
                     <div class="w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
                         <div class="w-[294px] h-[200px]">
                             <h5 class="bg-[#FFF] pl-4  pr-20 w-[82px] h-[28px] text-base rounded-lg">SwiftPay</h5>
-                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Optimize Home page</h3>
+                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Optimize Home page
+                            </h3>
                             <p class="w-[262px] h-[80px] p-4 bg-[#FFF] rounded-lg text-base text-[#00303C] ">Debug using
                                 Chrome DevTools, check for overlappin..</p>
                         </div>
@@ -163,7 +164,7 @@
 
                             </div>
                             <div class="mr-4 w-[130px] h-[24px] pr-4 ">
-                                <button 
+                                <button
                                     class=" taskC bg-[#3752FD] rounded-lg text-[#ffff] px-5 py-1  ">Completed</button>
                             </div>
                         </div>
@@ -172,7 +173,8 @@
                     <div class="w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
                         <div class="w-[294px] h-[200px]">
                             <h5 class="bg-[#FFF] pl-4  pr-12 w-[82px] h-[28px] text-base rounded-lg">Meta</h5>
-                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Add new emoji 🤲 </h3>
+                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Add new emoji 🤲
+                            </h3>
                             <p class="w-[262px] h-[80px] p-4 bg-[#FFF] rounded-lg text-base text-[#00303C] ">Debug using
                                 Chrome DevTools, check for overlappin..</p>
                         </div>
@@ -184,7 +186,7 @@
 
                             </div>
                             <div class="mr-4 w-[130px] h-[24px] pr-4 ">
-                                <button 
+                                <button
                                     class=" taskC bg-[#3752FD] rounded-lg text-[#ffff] px-5 py-1 ">Completed</button>
                             </div>
                         </div>
@@ -194,7 +196,8 @@
                         <div class="w-[294px] h-[200px]">
                             <h5 class="bg-[#FFF] pl-2  pr-2 w-[97px] h-[28px] text-base rounded-lg block">Google LLC
                             </h5>
-                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Integrate OpenAI API </h3>
+                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Integrate OpenAI API
+                            </h3>
                             <p class="w-[262px] h-[80px] p-4 bg-[#FFF] rounded-lg text-base text-[#00303C] ">Debug using
                                 Chrome DevTools, check for overlappin..</p>
                         </div>
@@ -206,7 +209,7 @@
 
                             </div>
                             <div class="mr-4 w-[130px] h-[24px] pr-4 ">
-                                <button 
+                                <button
                                     class=" taskC bg-[#3752FD] rounded-lg text-[#ffff] px-5 py-1 ">Completed</button>
                             </div>
                         </div>
@@ -215,7 +218,8 @@
                     <div class="w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
                         <div class="w-[294px] h-[200px]">
                             <h5 class="bg-[#FFF] pl-4  pr-20 w-[82px] h-[28px] text-base rounded-lg">Glassdoar</h5>
-                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Improve Job searching </h3>
+                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Improve Job searching
+                            </h3>
                             <p class="w-[262px] h-[80px] p-4 bg-[#FFF] rounded-lg text-base text-[#00303C] ">Debug using
                                 Chrome DevTools, check for overlappin..</p>
                         </div>
@@ -227,7 +231,7 @@
 
                             </div>
                             <div class="mr-4 w-[130px] h-[24px] pr-4 ">
-                                <button 
+                                <button
                                     class=" taskC bg-[#3752FD] rounded-lg text-[#ffff] px-5 py-1 ">Completed</button>
                             </div>
                         </div>
@@ -241,18 +245,19 @@
 
 
             <!-- Second part -->
-            <div class="w-[366px] h-[916px] rounded-lg bg-red-700  pt-6">
+            <div class="w-[366px] h-[916px] rounded-lg bg-[#FFF]  pt-6">
                 <!-- activity log icon and tittle and clear container -->
                 <div>
                     <!-- icon and tittle -->
                     <div class="flex mt-6px  gap-2 justify-center">
                         <img class="w[24px] h-[24px] pr-1" src="assets/activity.png" alt="">
-                        <h1 >Activity Log</h1>
+                        <h1>Activity Log</h1>
 
                     </div>
                     <!-- clear history btn -->
                     <div class="flex justify-center">
-                        <button class="  mt-4 py-[10px] px-5 rounded-md bg-[#3752FD] text-blue-50">Clear History</button>
+                        <button class="  mt-4 py-[10px] px-5 rounded-md bg-[#3752FD] text-blue-50">Clear
+                            History</button>
 
                     </div>
 
