--- a/qa.html
+++ b/qa.html
@@ -1,11 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-    
+
+<body class="bg-[#F4F7FF]">
+    <header class="max-w-screen-2xl mt-6  ">
+        <!-- banner div -->
+        <div class="flex justify-between bg-[#FFF] rounded-[16px] p-4 shadow">
+            <!-- icon & tittle container -->
+            <div class="flex p-4">
+                <img src="assets/logo.png" alt="">
+
+                <h4 class="pt-1 pl-3 text-4xl font-light">
+                    Dev<span class="text-[35.67px] font-bold text-[#00303C]
+                        ">Board</span>
+                </h4>
+
+            </div>
+            <!-- back to desk btn -->
+            <div>
+                <button class="mt-4 py-3 px-5 rounded-lg bg-[#3752FD] text-white"
+                    onclick="window.location.href='index.html';">
+                    Back to Design
+                </button>
+            </div>
+
+        </div>
+
+    </header>
+    <main>
+        <div class="flex justify-center text-2xl font-bold mt-4 ">
+            <h1 class="mb-4">Blogs</h1>
+        </div>
+        <!-- Question and Answer -->
+        <div class="w-[1519px] h-[600px] ">
+
+            <!-- Q1 -->
+            <div class="bg-[#FFF] rounded-lg w-[1519px] mb-4 pl-4 py-4">
+                <h4 class="text-xl font-semibold pb-4">Question-1: What are the different ways to select an element in
+                    the DOM?</h4>
+                <hr class="border-dashed bg-[#F4F7FF]">
+                <p class="pt-4">
+                    getElementsByTagName() ,
+                    getElementsByClassName() ,
+                    getElementById() ,
+                    querySelector() ,
+                    querySelectorAll()
+                </p>
+            </div>
+
+            <!-- Q2 -->
+            <div class="bg-[#FFF] rounded-lg w-[1519px] mb-4 pl-4 py-4">
+                <h4 class="text-xl font-semibold pb-4">Question-2: What is the difference between innerHTML, innerText,
+                    and textContent?</h4>
+                <hr class="border-dashed bg-[#F4F7FF]">
+                <p class="pt-4">
+                    innerHTML reads both the HTML markup and the text content of the element
+                    innerText read the content of an element
+                    textContent returns or sets all text including hidden elements.
+                </p>
+            </div>
+
+            <!-- Q3 -->
+            <div class="bg-[#FFF] rounded-lg w-[1519px] mb-4 pl-4 py-4">
+                <h4 class="text-xl font-semibold pb-4">Question-3: What is event delegation in the DOM?</h4>
+                <hr class="border-dashed bg-[#F4F7FF]">
+                <p class="pt-4">
+                    Event delegation is a technique where a parent element handles events for its child elements using event bubbling.
+                </p>
+            </div>
+
+            <!-- Q4 -->
+            <div class="bg-[#FFF] rounded-lg w-[1519px] mb-4 pl-4 py-4">
+                <h4 class="text-xl font-semibold pb-4">Question-4: What is event bubbling in the DOM?</h4>
+                <hr class="border-dashed bg-[#F4F7FF]">
+                <p class="pt-4">
+                    Event bubbling is a process where an event starts from the target element and propagates up to its parents, triggering event listeners on parent elements unless stopped with event.
+                </p>
+            </div>
+
+            <!-- Q5 -->
+            <div class="bg-[#FFF] rounded-lg w-[1519px] mb-4 pl-4 py-4">
+                <h4 class="text-xl font-semibold pb-4">Question-5: How do you create, add, and remove elements using
+                    JavaScript?</h4>
+                <hr class="border-dashed bg-[#F4F7FF]">
+                <p class="pt-4">
+                  -document.createElement("tagName").
+                  -appendChild()
+                  -removeChild().
+                </p>
+            </div>
+
+        </div>
+
+    </main>
 </body>
+
 </html>
