--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
                         <!-- Task Assigned Tittle -->
                         <div>
                             <p class="mt-[34px]">Task Assigned</p>
-                            <h1 id="taskExist" class="text-[32px] font-bold">05</h1>
-
+                            <h1 id="taskExist" class="text-[32px] font-bold">6</h1>
                         </div>
 
                     </section>
@@ -104,33 +103,32 @@
                 </div>
                 <!-- box container -->
                 <div class="ml-6 grid grid-cols-3 gap-9 mr-6">
-                    <!-- box1 -->
-                    <div class="w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
+                    <!-- Box Example -->
+                    <div class="taskBox w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
                         <div class="w-[294px] h-[200px]">
-                            <h5 class="bg-[#FFF] pl-4  pr-20 w-[82px] h-[28px] text-base rounded-lg">ShopEase</h5>
-                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Fix Mobile Button
-                                Issue </h3>
-                            <p class="w-[262px] h-[80px] p-4 bg-[#FFF] rounded-lg text-base text-[#00303C] ">Debug using
-                                Chrome DevTools, check for overlappin..</p>
+                            <h5 class="bg-[#FFF] pl-4 pr-20 w-[82px] h-[28px] text-base rounded-lg">ShopEase</h5>
+                            <h3 class="taskName text-2xl my-4 tracking-wide text-[#00303C]">Fix Mobile Button Issue
+                            </h3>
+                            <p class="w-[262px] h-[80px] p-4 bg-[#FFF] rounded-lg text-base text-[#00303C]">Debug
+                                using Chrome DevTools, check for overlapping..</p>
                         </div>
-                        <!-- deadline & btn -->
                         <div class="flex items-center justify-between">
                             <div>
                                 <p>Deadline</p>
                                 <p class="text-[#00303C]">21 March 2025</p>
-
                             </div>
-                            <div class="mr-4 w-[130px] h-[24px] pr-4 ">
+                            <div class="mr-4 w-[130px] h-[24px] pr-4">
                                 <button
-                                    class=" taskC bg-[#3752FD] rounded-lg text-[#ffff] px-5 py-1 ">Completed</button>
+                                    class="taskC bg-[#3752FD] rounded-lg text-[#ffff] px-5 py-1 disabled:bg-gray-400">Completed</button>
                             </div>
                         </div>
                     </div>
+
                     <!-- box2 -->
-                    <div class="w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
+                    <div class="taskBox w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
                         <div class="w-[294px] h-[200px]">
                             <h5 class="bg-[#FFF] pl-4  pr-[88px] w-[82px] h-[28px] text-base rounded-lg">CloudSync</h5>
-                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Add Dark Mode </h3>
+                            <h3 class="taskName text-2xl my-4  tracking-wide text-[#00303C] ">Add Dark Mode </h3>
                             <p class="w-[262px] h-[80px] p-4 bg-[#FFF] rounded-lg text-base text-[#00303C] ">Store the
                                 user's preference in localStorage, update CSS varia</p>
                         </div>
@@ -142,16 +140,16 @@
 
                             </div>
                             <div class="mr-4 w-[130px] h-[24px] pr-4 ">
-                                <button class="taskC bg-[#3752FD] rounded-lg text-white px-5 py-1 opacity-50 "
-                                    disabled>Completed</button>
+                                <button
+                                    class="taskC bg-[#3752FD] rounded-lg text-[#ffff] px-5 py-1 disabled:bg-gray-400">Completed</button>
                             </div>
                         </div>
                     </div>
                     <!-- box3 -->
-                    <div class="w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
+                    <div class="taskBox w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
                         <div class="w-[294px] h-[200px]">
                             <h5 class="bg-[#FFF] pl-4  pr-20 w-[82px] h-[28px] text-base rounded-lg">SwiftPay</h5>
-                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Optimize Home page
+                            <h3 class="taskName text-2xl my-4  tracking-wide text-[#00303C] ">Optimize Home page
                             </h3>
                             <p class="w-[262px] h-[80px] p-4 bg-[#FFF] rounded-lg text-base text-[#00303C] ">Debug using
                                 Chrome DevTools, check for overlappin..</p>
@@ -170,10 +168,10 @@
                         </div>
                     </div>
                     <!-- box4 -->
-                    <div class="w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
+                    <div class="taskBox w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
                         <div class="w-[294px] h-[200px]">
                             <h5 class="bg-[#FFF] pl-4  pr-12 w-[82px] h-[28px] text-base rounded-lg">Meta</h5>
-                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Add new emoji 🤲
+                            <h3 class="taskName text-2xl my-4  tracking-wide text-[#00303C] ">Add new emoji 🤲
                             </h3>
                             <p class="w-[262px] h-[80px] p-4 bg-[#FFF] rounded-lg text-base text-[#00303C] ">Debug using
                                 Chrome DevTools, check for overlappin..</p>
@@ -192,11 +190,11 @@
                         </div>
                     </div>
                     <!-- box5 -->
-                    <div class="w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
+                    <div class="taskBox w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
                         <div class="w-[294px] h-[200px]">
                             <h5 class="bg-[#FFF] pl-2  pr-2 w-[97px] h-[28px] text-base rounded-lg block">Google LLC
                             </h5>
-                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Integrate OpenAI API
+                            <h3 class="taskName text-2xl my-4  tracking-wide text-[#00303C] ">Integrate OpenAI API
                             </h3>
                             <p class="w-[262px] h-[80px] p-4 bg-[#FFF] rounded-lg text-base text-[#00303C] ">Debug using
                                 Chrome DevTools, check for overlappin..</p>
@@ -215,10 +213,10 @@
                         </div>
                     </div>
                     <!-- box6 -->
-                    <div class="w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
+                    <div class="taskBox w-[342px] h-[317px] bg-[#F4F7FF] pl-6 pt-6 rounded-xl">
                         <div class="w-[294px] h-[200px]">
                             <h5 class="bg-[#FFF] pl-4  pr-20 w-[82px] h-[28px] text-base rounded-lg">Glassdoar</h5>
-                            <h3 id="taskName" class="text-2xl my-4  tracking-wide text-[#00303C] ">Improve Job searching
+                            <h3 class="taskName text-2xl my-4  tracking-wide text-[#00303C] ">Improve Job searching
                             </h3>
                             <p class="w-[262px] h-[80px] p-4 bg-[#FFF] rounded-lg text-base text-[#00303C] ">Debug using
                                 Chrome DevTools, check for overlappin..</p>
@@ -242,8 +240,6 @@
 
             </div>
 
-
-
             <!-- Second part -->
             <div class="w-[366px] h-[916px] rounded-lg bg-[#FFF]  pt-6">
                 <!-- activity log icon and tittle and clear container -->
@@ -256,15 +252,17 @@
                     </div>
                     <!-- clear history btn -->
                     <div class="flex justify-center">
-                        <button class="  mt-4 py-[10px] px-5 rounded-md bg-[#3752FD] text-blue-50">Clear
+                        <button onclick="clearHistory()"
+                            class="  mt-4 mb-2 py-[10px] px-5 rounded-md bg-[#3752FD] text-blue-50">Clear
                             History</button>
+                    </div>
+                    <div id="taskHistory">
 
                     </div>
 
                 </div>
                 <!-- comment container -->
-                <div id="comment" class="w-[298px] h-[48px]">
-
+                <div id="comment" class="w-[298px] h-[48px] ml-2">
 
                 </div>
 
